<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?cardBackground"
    android:fadeScrollbars="false"
    android:fillViewport="true">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipChildren="false"
      android:clipToPadding="false"
      android:orientation="vertical"
      android:padding="@dimen/margin_base">

    <ImageView
        android:layout_width="@dimen/about_logo"
        android:layout_height="@dimen/about_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_base"
        android:layout_marginBottom="@dimen/margin_half"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo"
        app:tint="?attr/colorLogo" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_half"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/MwmTextAppearance.Body3"
        android:textIsSelectable="true"
        tools:text="2021.10.15-15-Google" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_base"
        android:text="@string/about_headline"
        android:textAlignment="center"
        android:textAppearance="@style/MwmTextAppearance.Headline"
        android:textColor="?android:textColorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_half"
        android:text="@string/about_tranqueras_conectadas"
        android:textAppearance="@style/MwmTextAppearance.Body1"
        android:textColor="?android:textColorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_half"
        android:text="@string/about_proposition_2"
        android:textAppearance="@style/MwmTextAppearance.Body1"
        android:textColor="?android:textColorPrimary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
      android:id="@+id/faq"
      style="@style/MwmWidget.TextView.Item"
      android:text="@string/faq"
      app:drawableStartCompat="@drawable/ic_question_mark" />

    <TextView
        android:id="@+id/rate"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/rate_the_app"
        app:drawableStartCompat="@drawable/ic_rate" />

    <TextView
        android:id="@+id/web"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/website"
        app:drawableStartCompat="@drawable/ic_website" />

    <TextView
        android:id="@+id/email"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/email"
        app:drawableStartCompat="@drawable/ic_email" />

    <TextView
        android:id="@+id/twitter"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/twitter"
        app:drawableStartCompat="@drawable/ic_twitterx" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_quarter"
        android:layout_marginTop="@dimen/margin_quarter"
        android:background="?dividerHorizontal" />

    <TextView
        android:id="@+id/privacy_policy"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/privacy_policy" />

    <TextView
        android:id="@+id/term_of_use_link"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/terms_of_use" />

    <TextView
        android:id="@+id/copyright"
        style="@style/MwmWidget.TextView.Item"
        android:text="@string/copyright" />

  </LinearLayout>
</ScrollView>
